Added functionality and should've finished the backend logic. Need to test out logic and add more comments to methods also add quick frontend with socket functionality next